@@ -214,10 +214,10 @@ Additional options if building SkunkWeb:
                            space delimited list of services to install, valid
                            names are:
 
-                           aecgi, ae_component, basicauth, fcgiprot, httpd, mysql,
-                           oracle, postgresql, product, remote, remote_client, 
+                           aecgi, ae_component, auth, basicauth, fcgiprot, httpd, 
+                           mysql, oracle, postgresql, product, remote, remote_client, 
                            requestHandler, rewrite, sessionHandler, templating, 
-                           userdir, web auth
+                           userdir, web
                            [default: install all services]
 
   --with-sudo=/path/sudo  Specify path to sudo
